Add tanstack-router + server apps

--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -1,5 +1,6 @@
 {
   "name": "remix",
+  "version": "1.0.0",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -17,11 +18,13 @@
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
     "isbot": "^4.1.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.13.1",
+    "@types/lodash": "^4.17.13",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.19",
