--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "node": ">=20"
   },
   "scripts": {
+    "clean": "node scripts/clean",
+    "dev": "pnpm turbo run dev",
     "dev:remix": "pnpm turbo run dev --filter=remix...",
+    "dev:tanstack-router": "pnpm turbo run dev --filter=tanstack-router...",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,css}\"",
@@ -19,12 +22,14 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "commander": "^12.1.0",
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "rimraf": "^6.0.1",
     "turbo": "^2.2.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.11.0"
