--- a/shared/ui/package.json
+++ b/shared/ui/package.json
@@ -7,6 +7,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@contacts/server": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
