--- a/apps/tanstack-router/package.json
+++ b/apps/tanstack-router/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --port=3001",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "vite --port 3000"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.13.1",
