Fix nexjs seed action cache

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "build": "turbo run build",
     "clean": "node scripts/clean",
     "dev": "pnpm turbo run dev",
+    "dev:nextjs": "pnpm turbo run dev --filter=nextjs...",
     "dev:remix": "pnpm turbo run dev --filter=remix...",
     "dev:tanstack-router": "pnpm turbo run dev --filter=tanstack-router...",
+    "dev:tanstack-start": "pnpm turbo run dev --filter=tanstack-start...",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,css}\"",
