--- a/shared/server/package.json
+++ b/shared/server/package.json
@@ -19,6 +19,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
+    "dev": "pnpm build --watch",
     "build": "tsc -b tsconfig.json tsconfig.cjs.json"
   },
   "dependencies": {
