--- a/shared/ui/package.json
+++ b/shared/ui/package.json
@@ -4,6 +4,7 @@
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
+    "dev": "pnpm build --watch",
     "build": "tsc -b"
   },
   "dependencies": {
