--- a/apps/tanstack-router/package.json
+++ b/apps/tanstack-router/package.json
@@ -4,34 +4,34 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite --port=3001",
+    "dev": "vite dev",
     "build": "vite build",
     "serve": "vite preview",
-    "start": "vite --port 3000"
+    "start": "vite start --port 3000"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.16.0",
+    "@clerk/clerk-react": "^5.50.0",
     "@contacts/server": "workspace:*",
     "@contacts/ui": "workspace:*",
-    "@tanstack/react-query": "^5.60.6",
-    "@tanstack/react-query-devtools": "^5.60.6",
-    "@tanstack/react-router": "^1.82.1",
-    "@tanstack/router-devtools": "^1.82.1",
-    "@tanstack/router-plugin": "^1.81.9",
-    "immer": "^10.1.1",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/react-router": "^1.132.37",
+    "@tanstack/router-devtools": "^1.132.37",
+    "@tanstack/router-plugin": "^1.132.37",
+    "immer": "^10.1.3",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.13",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "vite": "^5.4.11"
+    "@types/lodash": "^4.17.20",
+    "@types/react": "^18.3.25",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "vite": "^6.3.6"
   }
 }
