--- a/apps/tanstack-start/package.json
+++ b/apps/tanstack-start/package.json
@@ -4,39 +4,40 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start"
+    "dev": "vite dev",
+    "build": "vite build",
+    "serve": "vite preview",
+    "start": "vite start --port 3000"
   },
   "dependencies": {
-    "@clerk/tanstack-start": "^0.5.0",
+    "@clerk/tanstack-react-start": "^0.25.3",
     "@contacts/server": "workspace:*",
     "@contacts/ui": "workspace:*",
-    "@tanstack/react-query": "^5.60.6",
-    "@tanstack/react-query-devtools": "^5.60.6",
-    "@tanstack/react-router": "^1.82.1",
-    "@tanstack/react-router-with-query": "^1.82.1",
-    "@tanstack/router-devtools": "^1.82.1",
-    "@tanstack/start": "^1.82.1",
-    "dotenv": "^16.4.5",
+    "@tanstack/react-devtools": "^0.7.6",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/react-router": "~1.131.50",
+    "@tanstack/react-router-devtools": "~1.131.50",
+    "@tanstack/react-router-ssr-query": "~1.131.50",
+    "@tanstack/react-start": "~1.131.50",
+    "@tanstack/router-plugin": "~1.131.50",
+    "dotenv": "^17.2.3",
     "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "redaxios": "^0.5.1",
-    "tailwind-merge": "^2.5.4",
-    "vinxi": "0.4.3",
-    "zod": "^3.23.8"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3",
-    "vite-tsconfig-paths": "^5.1.2"
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^22.18.8",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.9",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
