--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbo --port 3000",
     "build": "next build",
     "start": "next start"
   },
