--- a/turbo.json
+++ b/turbo.json
@@ -1,12 +1,15 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": [".env"],
+  "ui": "tui",
+  "globalDependencies": [".env", "tsconfig.json", "tsconfig.base.json"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"]
     },
     "dev": {
       "persistent": true,
+      "interactive": true,
+      "interruptible": true,
       "cache": false
     }
   }
