--- a/package.json
+++ b/package.json
@@ -17,25 +17,15 @@
     "dev:remix": "pnpm turbo run dev --filter=remix...",
     "dev:tanstack-router": "pnpm turbo run dev --filter=tanstack-router...",
     "dev:tanstack-start": "pnpm turbo run dev --filter=tanstack-start...",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,css}\"",
-    "format:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx,css}\"",
+    "format-and-lint": "biome check .",
+		"format-and-lint:fix": "biome check . --write",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@biomejs/biome": "^2.2.6",
     "commander": "^14.0.1",
-    "eslint": "^9.37.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.0",
-    "globals": "^16.4.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
     "rimraf": "^6.0.1",
     "turbo": "^2.5.8",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0"
+    "typescript": "^5.9.3"
   }
 }
