--- a/apps/tanstack-start/package.json
+++ b/apps/tanstack-start/package.json
@@ -10,34 +10,36 @@
     "start": "vite start --port 3000"
   },
   "dependencies": {
-    "@clerk/tanstack-react-start": "^0.25.3",
+    "@clerk/tanstack-react-start": "^0.26.0",
     "@contacts/server": "workspace:*",
     "@contacts/ui": "workspace:*",
     "@tanstack/react-devtools": "^0.7.6",
-    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query": "^5.90.3",
     "@tanstack/react-query-devtools": "^5.90.2",
-    "@tanstack/react-router": "~1.131.50",
-    "@tanstack/react-router-devtools": "~1.131.50",
-    "@tanstack/react-router-ssr-query": "~1.131.50",
-    "@tanstack/react-start": "~1.131.50",
-    "@tanstack/router-plugin": "~1.131.50",
+    "@tanstack/react-router": "^1.132.47",
+    "@tanstack/react-router-devtools": "^1.133.1",
+    "@tanstack/react-router-ssr-query": "^1.132.47",
+    "@tanstack/react-start": "^1.133.2",
+    "@tanstack/router-plugin": "^1.132.56",
     "dotenv": "^17.2.3",
     "lodash": "^4.17.21",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "srvx": "0.8.15"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.20",
     "@types/node": "^22.18.8",
-    "@types/react": "^19.0.0",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
-    "vite": "^7.1.9",
+    "vite": "^7.1.10",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
